--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
       <!-- <link rel="stylesheet" type="text/css" href="dist/main.css"> -->
     </head>
     <body>
-        <script type="text/javascript" src="dist/bundle.js"></script>
+        <script type="text/javascript" src="dist/main.js"></script>
     </body>
 </html>
